# gringron-wallet

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.lock_  Cargo.toml  README.md
.github/workflows/: cd.yaml
.hooks/: pre-commit
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs  types.rs
api/tests/: slate_versioning.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs
controller/tests/: accounts.rs  build_chain.rs  build_output.rs  check.rs  file.rs  invoice.rs  late_lock.rs  no_change.rs  payment_proofs.rs  repost.rs  revert.rs  self_send.rs  slatepack.rs  transaction.rs  ttl_cutoff.rs  tx_list_filter.rs  updater_thread.rs
controller/tests/common/: mod.rs
doc/: tls-setup.md
doc/design/: design.md  goals.md  wallet-arch.puml
doc/samples/v3_api_node/: readme.md
doc/samples/v3_api_node/src/: index.js
doc/transaction/: basic-transaction-wf.puml
impls/: Cargo.toml
impls/src/: error.rs  lib.rs
impls/src/adapters/: file.rs  http.rs  mod.rs  slatepack.rs
impls/src/backends/: lmdb.rs  mod.rs
impls/src/client_utils/: client.rs  json_rpc.rs  mod.rs
impls/src/lifecycle/: default.rs  mod.rs  seed.rs
impls/src/node_clients/: http.rs  mod.rs  resp_types.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: bridge.rs  config.rs  mod.rs  process.rs  proxy.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  api_impl.rs  error.rs  internal.rs  lib.rs  slate.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_updater.rs  types.rs
libwallet/src/internal/: keys.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/slate_versions/: mod.rs  ser.rs  v4.rs  v4_bin.rs
libwallet/src/slatepack/: address.rs  armor.rs  mod.rs  packer.rs  types.rs
libwallet/tests/: libwallet.rs  slate_versioning.rs
src/: lib.rs
src/cli/: cli.rs  mod.rs
src/cmd/: mod.rs  wallet.rs  wallet_args.rs
tests/: cmd_line_basic.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/common/: mod.rs
util/: Cargo.toml
util/src/: byte_ser.rs  lib.rs  ov3.rs
