[package]
name = "gringron_wallet"
version = "5.2.0-beta.1"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron-wallet"
keywords = [ "crypto", "gringron", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.gringron", "**/*.gringron2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "gringron-wallet"
path = "src/bin/gringron-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
rpassword = "4.0"
thiserror = "1"
prettytable-rs = "0.10"
log = "0.4"
linefeed = "0.6"
semver = "0.10"
rustyline = "6"
lazy_static = "1"

gringron_wallet_api = { path = "./api", version = "5.2.0-beta.1" }
gringron_wallet_impls = { path = "./impls", version = "5.2.0-beta.1" }
gringron_wallet_libwallet = { path = "./libwallet", version = "5.2.0-beta.1" }
gringron_wallet_controller = { path = "./controller", version = "5.2.0-beta.1" }
gringron_wallet_config = { path = "./config", version = "5.2.0-beta.1" }
gringron_wallet_util = { path = "./util", version = "5.2.0-beta.1" }


##### GrinGron Imports

# For Release
#gringron_core = "4.0.0"
#gringron_keychain = "4.0.0"
#gringron_util = "4.0.0"
#gringron_api = "4.0.0"

# For beta release

gringron_core = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3"}
gringron_keychain = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_util = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_api = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }

# For bleeding edge
# gringron_core = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_keychain = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_util = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_api = { git = "https://github.com/groncoin/gringron", branch = "master" }

# For local testing
# gringron_core = { path = "../gringron/core"}
# gringron_keychain = { path = "../gringron/keychain"}
# gringron_util = { path = "../gringron/util"}
# gringron_api = { path = "../gringron/api"}

###### 

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
url = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
remove_dir_all = "0.7"
easy-jsonrpc-mw = "0.5.4"