[package]
name = "gringron_wallet_controller"
version = "5.2.0-beta.1"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Controllers for gringron wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron-wallet"
keywords = [ "crypto", "gringron", "mimblewimble" ]
exclude = ["**/*.gringron", "**/*.gringron2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
futures = "0.3"
hyper = "0.13"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.10"
ring = "0.16"
term = "0.6"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"
chrono = { version = "0.4.11", features = ["serde"] }
easy-jsonrpc-mw = "0.5.4"
lazy_static = "1"
thiserror = "1"
qr_code = "1.1.0"

gringron_wallet_util = { path = "../util", version = "5.2.0-beta.1" }
gringron_wallet_api = { path = "../api", version = "5.2.0-beta.1" }
gringron_wallet_impls = { path = "../impls", version = "5.2.0-beta.1" }
gringron_wallet_libwallet = { path = "../libwallet", version = "5.2.0-beta.1" }
gringron_wallet_config = { path = "../config", version = "5.2.0-beta.1" }

##### GrinGron Imports

# For Release
#gringron_core = "4.0.0"
#gringron_keychain = "4.0.0"
#gringron_util = "4.0.0"
#gringron_api = "4.0.0"

# For beta release

gringron_core = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3"}
gringron_keychain = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_util = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_api = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }

# For bleeding edge
# gringron_core = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_keychain = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_util = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_api = { git = "https://github.com/groncoin/gringron", branch = "master" }

# For local testing
# gringron_core = { path = "../../gringron/core"}
# gringron_keychain = { path = "../../gringron/keychain"}
# gringron_util = { path = "../../gringron/util"}
# gringron_api = { path = "../../gringron/api"}

#####

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.4"
remove_dir_all = "0.7"

##### GrinGron Imports

# For Release
# gringron_chain = "4.0.0"

# For beta release

gringron_chain = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }

# For bleeding edge
#  gringron_chain = { git = "https://github.com/groncoin/gringron", branch = "master" }

# For local testing
# gringron_chain = { path = "../../gringron/chain"}

##### 

