[package]
name = "gringron_integration"
version = "1.1.0"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron"
keywords = [ "crypto", "gringron", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
http = "0.1"
itertools = "0.7"
rand = "0.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"
blake2-rfc = "0.2"
bufstream = "0.1"

#gringron_apiwallet = { path = "../apiwallet", version = "1.1.0" }
#gringron_libwallet = { path = "../libwallet", version = "1.1.0" }
#gringron_refwallet = { path = "../refwallet", version = "1.1.0" }
#gringron_wallet_config = { path = "../config", version = "1.1.0" }

#gringron_core = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_keychain = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_chain = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_util = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_api = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_store = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_p2p = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
#gringron_servers = { git = "https://github.com/groncoin/gringron", branch = "milestone/1.1.0" }
