[package]
name = "gringron_wallet_libwallet"
version = "5.2.0-beta.1"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron-wallet"
keywords = [ "crypto", "gringron", "mimblewimble" ]
exclude = ["**/*.gringron", "**/*.gringron2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
base64 = "0.9"
regex = "1.3"
sha2 = "0.8"
bs58 = "0.3"
age = "0.7"
curve25519-dalek = "2.1"
secrecy = "0.6"
bech32 = "0.7"
byteorder = "1.3"
num-bigint = "0.2"

gringron_wallet_util = { path = "../util", version = "5.2.0-beta.1" }
gringron_wallet_config = { path = "../config", version = "5.2.0-beta.1" }

##### GrinGron Imports

# For Release
#gringron_core = "4.0.0"
#gringron_keychain = "4.0.0"
#gringron_util = "4.0.0"

# For beta release

gringron_core = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3"}
gringron_keychain = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_util = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }
gringron_store = { git = "https://github.com/groncoin/gringron", tag = "v5.2.0-beta.3" }

# For bleeding edge
# gringron_core = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_keychain = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_util = { git = "https://github.com/groncoin/gringron", branch = "master" }
# gringron_store = { git = "https://github.com/groncoin/gringron", branch = "master" }

# For local testing
# gringron_core = { path = "../../gringron/core"}
# gringron_keychain = { path = "../../gringron/keychain"}
# gringron_util = { path = "../../gringron/util"}
# gringron_store = { path = "../../gringron/store"}

##### 
